--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <div class="box">
       <h1>Text</h1>
     </div>
+    <div class="box2">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti cumque similique excepturi. Facere dicta
+      dolorem in cum ea culpa tempora exercitationem quod animi deleniti. Quibusdam aspernatur porro facilis atque!
+    </div>
   </body>
 
 </html>
