--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque deleniti cumque similique excepturi. Facere dicta
       dolorem in cum ea culpa tempora exercitationem quod animi deleniti. Quibusdam aspernatur porro facilis atque!
     </div>
+    <p>mY NAME IS PRATIK</p>
   </body>
 
 </html>
